Details
-
Bug
-
Resolution: Fixed
-
Major
-
None
Description
using r72196 in vbox, with a misconfigured network connection (such that reactos assigns itself a virtual private address) running ipconfig /all results in the following:
Unhandled exception
|
ExceptionCode: c0000005
|
Faulting Address: 18
|
CS:EIP 1b:7c6d80f0
|
DS 23 ES 23 FS 3b GS 0
|
EAX: 00235cf8 EBX: 00000000 ECX: 00235cf8
|
EDX: 00230640 EBP: 0022fb00 ESI: 7c6d870c ESP: 0022fae0
|
EDI: 00235790 EFLAGS: 00010202
|
Address:
|
7c6b0000+280f0 C:\ReactOS\system32\msvcrt.dll C:\ReactOS\system32\msvcrt.dll sdk/lib/crt/time/asctime.c:82 (asctime)
|
Frames:
|
400000+2018 C:\ReactOS\System32\ipconfig.exe C:\ReactOS\System32\ipconfig.exe base/applications/network/ipconfig/ipconfig.c:548 (ShowInfo)
|
400000+2a9e C:\ReactOS\System32\ipconfig.exe
|
400000+301f C:\ReactOS\System32\ipconfig.exe
|
400000+3081 C:\ReactOS\System32\ipconfig.exe
|
7c760000+10437 C:\ReactOS\system32\kernel32.dll
|
Apparently the result of attempting to calculate a lease time where none exists.
Attachments
Issue Links
- relates to
-
CORE-15231 ipconfig returns "ERROR_PROC_NOT_FOUND"
-
- Resolved
-