[IPCONFIG] Fix crash on 'ipconfig /all'

Ipconfig should not display invalid 'Lease Obtained' and  'Lease Expires' times because it did not yet receive any DHCP configuration.

Fixes CORE-11837